[gd_scene load_steps=2 format=3 uid="uid://uga101r1hfp4"]

[ext_resource type="Script" uid="uid://vukxvhy5n02i" path="res://Scripts/settings.gd" id="1_4geyq"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_4geyq")

[node name="Resolution" type="Label" parent="."]
offset_left = 138.0
offset_top = 205.0
offset_right = 225.0
offset_bottom = 228.0
text = "Resolution:"

[node name="OptionButton" type="OptionButton" parent="Resolution"]
layout_mode = 0
offset_left = 113.0
offset_top = -4.0
offset_right = 354.0
offset_bottom = 26.0

[node name="Fullscreen" type="Label" parent="."]
offset_left = 135.0
offset_top = 265.0
offset_right = 214.0
offset_bottom = 288.0
text = "Fullscreen"
metadata/_edit_use_anchors_ = true

[node name="CheckBox" type="CheckBox" parent="Fullscreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0886076
anchor_top = 0.173913
anchor_right = 0.0886076
anchor_bottom = 0.173913
offset_left = 90.0
offset_top = -2.0
offset_right = 114.0
offset_bottom = 22.0
metadata/_edit_use_anchors_ = true

[node name="Volume" type="Label" parent="."]
offset_left = 140.0
offset_top = 329.0
offset_right = 199.0
offset_bottom = 352.0
text = "Volume"

[node name="HSlider" type="HSlider" parent="Volume"]
offset_left = 77.0
offset_top = 3.0
offset_right = 274.0
offset_bottom = 23.0

[node name="ApplyButton" type="Button" parent="."]
offset_left = 908.0
offset_top = 558.0
offset_right = 1065.0
offset_bottom = 604.0
text = "Apply"

[node name="ExitButton" type="Button" parent="."]
offset_left = 735.0
offset_top = 558.0
offset_right = 892.0
offset_bottom = 604.0
text = "Exit"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="item_selected" from="Resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Fullscreen/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="Volume/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="button_up" from="ApplyButton" to="." method="_on_apply_button_button_up"]
[connection signal="button_up" from="ExitButton" to="." method="_on_exit_button_button_up"]
